--- a/localhost/site/.htaccess
+++ b/localhost/site/.htaccess
@@ -16,3 +16,6 @@ RewriteCond %{REQUEST_URI}::$1 ^(/.+)(.+)::\2$
 RewriteRule ^(.*) - [E=BASE:%1]
 RewriteRule ^(.*)$ %{ENV:BASE}index.php [NC,L]
 
+# Env variables
+SetEnv DEVELOPMENT true
+#SetEnv SHOW_ERRORS true
