Updates and a little bit doc

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cowboy/suitup2",
+    "name": "braghim-sistemas/suitup2-dev",
     "description": "Suitup 2.0",
     "type": "project",
     "require": {
